...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final AsyncValue<List<Job>> asyncJobs = ref.watch(jobsProvider);

    return Scaffold(
      appBar: AppBar(
        title: const Text('Job details'),
        backgroundColor: Theme.of(context).colorScheme.inversePrimary,
      ),
      body: asyncJobs.when(
        loading: () => const Center(child: CircularProgressIndicator()),
        error: (error, stackTrace) => const _DetailMessage(
          icon: Icons.cloud_off_outlined,
...
